--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签</label>
-                    <input type="text" class="form-control" id="tag" name="tag" th:value="${tag}" placeholder="输入标签，以逗号隔开">
+                    <input type="text" class="form-control" id="tag" name="tag" th:value="${tag}" placeholder="输入标签，以,号隔开">
                 </div>
                 <div class="container-fluid main">
                     <div class="row">
