--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -9,3 +9,14 @@ body{
     float: right;
     margin-bottom: 15px;
 }
+
+.image{
+    height: 38px;
+    width: 38px;
+}
+
+.text-desc{
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
+}
